src/components/navbar.module.css
:root {
    --animDuration: 400ms;
}
.nav {
    grid-area: menu;
    position: fixed;
    top: calc(100vh - var(--menuHeight));
    height: var(--menuHeight);
    width: 100%;
    z-index: 99;
}
.nav .menuToggle {
    height: 100%;
    background-color: var(--menuBackgroundColor);
}
.menu {
    position: relative;
    display: flex;
    justify-content: space-between;
    align-items: center;
    list-style: none;
    height: 100%;
    max-width: var(--menuMaxWidth);
    padding: 0;
    padding-bottom: 5px;
    margin: auto;
}
.menuToggle .input {
    display: none;
    width: 44px;
    height: 32px;
    position: absolute;
    top: 3px;
    left: 2px;
    
    margin: 0;
    padding: 0;
    border: 0;

    cursor: pointer;
    
    opacity: 0; /* hide this */
    z-index: 2; /* and place it over the hamburger */
    
    -webkit-touch-callout: none;
}

/*
 * Just a quick hamburger
 */
.menuToggle .span
{
    display: none;
    width: 33px;
    height: 4px;
    margin-bottom: 5px;
    position: relative;
    top: 4px;
    left: 8px;

    background: var(--menuLinkColor);
    border-radius: 3px;

    z-index: 1;

    transform-origin: 4px -1px;

    transition: transform 0.4s cubic-bezier(0.77,0.2,0.05,1.0),
                background 0.4s cubic-bezier(0.77,0.2,0.05,1.0),
                opacity 0.9s ease;
}

.menuToggle .span:first-child {
    transform-origin: 0% 0%;
}

.menuToggle .span:nth-last-child(2) {
    transform-origin: 0% 100%;
}

/* 
 * Transform all the slices of hamburger
 * into a crossmark.
 */
.menuToggle .input:checked ~ .span {
    opacity: 1;
    transform: rotate(45deg) translate(-2px, -1px);
}
 
/*
 * But let's hide the middle one.
 */
.menuToggle .input:checked ~ .span:nth-last-child(3) {
    opacity: 0;
    transform: rotate(0deg) scale(0.2, 0.2);
}
 
/*
 * Oh yeah and the last one should go the other direction
 */
.menuToggle .input:checked ~ .span:nth-last-child(2) {
    transform: rotate(-45deg) translate(0, -1px);
}

/*
 * And let it slide in
 */
 .menuToggle .input:checked ~ .menu
 {
   transform: none;
   opacity: 1;
 }

.link {
    color: var(--menuLinkColor);
    text-decoration: none;
    text-transform: uppercase;
    font-weight: 400;
    white-space: nowrap;

    transition-property: border-bottom-color;
    transition-duration: var(--animDuration);
    padding-bottom: var(--menuActiveIndicatorHeight);
    border-bottom: var(--menuActiveIndicatorHeight) solid transparent;
}
.link:hover {
    border-bottom-color: var(--menuLinkColor);
    transition-duration: var(--animDuration);
}

.activeLink {
    cursor: default;
    transition-duration: var(--animDuration);
    border-bottom-color: var(--accentColor);
}
.activeLink:hover {
    border-bottom-color: var(--accentColor);
}

@media only screen and (max-width: 750px) {
    .nav {
        height: 38px;
        top: 0px;
    }

    .nav .menuToggle {
        padding-top: 4px;
    }

    .nav .input,
    .nav .span {
        display: block;
    }

    .nav ul li {
        padding: 10px;
    }

    .menu
    {
        display: flex;
        flex-direction: column;
        justify-content: space-between;
        align-items: center;

        width: 100%;
        max-width: 100%;
        height: 220px;
        padding: 0 0 20px 0;
        margin: 0;
        background-color: var(--menuBackgroundColor);

        -webkit-font-smoothing: antialiased;
        /* to stop flickering of text in safari */
        
        transform-origin: 0% 0%;
        transform: translate(0, -120%);
        opacity: 0;
        
        transition: transform 0.7s cubic-bezier(0.77,0.2,0.05,1.0),
                    opacity 0.7s ease;
    } 
}

